# preboot_screenreader

./: App.tsx  LICENSE  README.md  app.json  metro.config.js  package.json  pubspec.yaml
android/app/: build.gradle  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/preboot_screenreader/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
assets/model/: model.json
assets/screen_classifier/: labels.txt
integration_test/: app_test.dart
ios/: .gitignore
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: camera.dart  classifier.dart  image_converter.dart  native_opencv.dart  text_recognition.dart  text_recognition_painter.dart  text_to_speech.dart
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/src/main/kotlin/com/example/native_opencv/: NativeOpencvPlugin.kt
native_opencv/ios/: .gitignore  native_opencv.podspec
native_opencv/ios/Classes/: NativeOpencvPlugin.cpp  NativeOpencvPlugion.cpp
native_opencv/lib/: native_opencv.dart
